finished data exploration

--- a/angel-investor-1-data_cleaning.ipynb
+++ b/angel-investor-1-data_cleaning.ipynb
@@ -2,29 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 467,
-   "id": "be4fb613",
+   "execution_count": 27,
+   "id": "2164281d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import seaborn as sns\n",
     "import sagemaker\n",
+    "import boto3\n",
     "\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
-   "id": "3f9ac161",
+   "execution_count": 24,
+   "id": "9a64de20",
    "metadata": {},
    "outputs": [],
    "source": [
     "session = sagemaker.Session()\n",
+    "bucket = session.default_bucket()\n",
     "prefix = 'angel-investor'\n",
     "test_location = None\n",
     "val_location = None\n",
@@ -33,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd938c03",
+   "id": "7b0793d6",
    "metadata": {},
    "source": [
     "## Downloading Start-Up Data & Importing into Pandas"
@@ -41,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
-   "id": "65d2d85b",
+   "execution_count": 8,
+   "id": "2b110a36",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +55,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 48.6M  100 48.6M    0     0  34.2M      0  0:00:01  0:00:01 --:--:-- 34.2M\n"
+      "100 48.6M  100 48.6M    0     0  20.4M      0  0:00:02  0:00:02 --:--:-- 20.4M\n"
      ]
     }
    ],
@@ -61,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
-   "id": "624ffdc3",
+   "execution_count": 9,
+   "id": "7559c4b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,15 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
-   "id": "34ed13ff",
+   "execution_count": 10,
+   "id": "cc3bb38d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "startup.xls  startup.xlsx  testing.csv\ttraining.csv  validation.csv\r\n"
+      "companies.csv  startup.xls  startup.xlsx\r\n"
      ]
     }
    ],
@@ -89,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
-   "id": "953c9d41",
+   "execution_count": 11,
+   "id": "6ff8114f",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cde6243d",
+   "id": "dc3cb556",
    "metadata": {},
    "source": [
     "\n",
@@ -135,10 +139,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
-   "id": "53c2ee8b",
+   "execution_count": 12,
+   "id": "286cbbb6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/openpyxl/worksheet/_reader.py:308: UserWarning: Unknown extension is not supported and will be removed\n",
+      "  warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "companies_df = xl.parse(\"Companies\")\n",
     "companies_df.to_csv(\"data/companies.csv\", index=False)\n"
@@ -146,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5921c976",
+   "id": "397945a6",
    "metadata": {},
    "source": [
     "## Keeping Data only for US Companies"
@@ -154,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
-   "id": "1c95a1e7",
+   "execution_count": 13,
+   "id": "106dc5bb",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +544,7 @@
        "[28793 rows x 18 columns]"
       ]
      },
-     "execution_count": 474,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7992d653",
+   "id": "42b0f781",
    "metadata": {},
    "source": [
     "### Dropping Rows with Missing Values"
@@ -551,8 +564,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
-   "id": "ff9f3653",
+   "execution_count": 14,
+   "id": "82c91a6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50a9250c",
+   "id": "b0843737",
    "metadata": {},
    "source": [
     "### Class to Help Inspect Data for Cleaning Purposes"
@@ -569,8 +582,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
-   "id": "b5de7d15",
+   "execution_count": 15,
+   "id": "3416e112",
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +788,7 @@
        "16  2011-12-28 00:00:00  "
       ]
      },
-     "execution_count": 476,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28324042",
+   "id": "884c4c19",
    "metadata": {},
    "source": [
     "### Removing columns that don't have value for analysis"
@@ -865,8 +878,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
-   "id": "95053170",
+   "execution_count": 16,
+   "id": "97c6167d",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1083,7 @@
        "[20863 rows x 8 columns]"
       ]
      },
-     "execution_count": 477,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbdaf6cb",
+   "id": "5db1c3d9",
    "metadata": {},
    "source": [
     "### Cleaning Text Columns"
@@ -1101,8 +1114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
-   "id": "41999dd4",
+   "execution_count": 17,
+   "id": "cb952202",
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1319,7 @@
        "[20863 rows x 8 columns]"
       ]
      },
-     "execution_count": 479,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a855717a",
+   "id": "5a1175ef",
    "metadata": {},
    "source": [
     "### Exploding Category Column and Converting to Dummy Variables"
@@ -1330,8 +1343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
-   "id": "a8a6c027",
+   "execution_count": 18,
+   "id": "bcb3a736",
    "metadata": {},
    "outputs": [
     {
@@ -1379,8 +1392,8 @@
        "|public transportation|          37\n",
        "|legal|                          35\n",
        "|medical devices|                28\n",
-       "|local businesses|               27\n",
        "|consumer electronics|           27\n",
+       "|local businesses|               27\n",
        "|design|                         25\n",
        "Name: category_list, dtype: int64"
       ]
@@ -1461,7 +1474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e32ea11f",
+   "id": "4308b31c",
    "metadata": {},
    "source": [
     "### One-Hot Encoding Categorical Variables"
@@ -1469,8 +1482,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
-   "id": "05fe556b",
+   "execution_count": 19,
+   "id": "8e14c1fe",
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1921,7 @@
        "[20863 rows x 985 columns]"
       ]
      },
-     "execution_count": 481,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1921,7 +1934,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "013de4ed",
+   "id": "52e529e8",
    "metadata": {},
    "source": [
     "## Splitting into Training, Test, and Validation Datasets"
@@ -1929,8 +1942,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
-   "id": "e72f3a5e",
+   "execution_count": 20,
+   "id": "15e42b92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1943,8 +1956,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
-   "id": "35d5d6de",
+   "execution_count": 21,
+   "id": "4b450e6c",
    "metadata": {},
    "outputs": [
     {
@@ -1965,7 +1978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7923ecc",
+   "id": "b0b5d2d3",
    "metadata": {},
    "source": [
     "### Saving data to CSV then to S3"
@@ -1973,34 +1986,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
-   "id": "9aa01244",
+   "execution_count": 23,
+   "id": "fa714aae",
    "metadata": {},
    "outputs": [],
    "source": [
     "training.to_csv(\"data/training.csv\", index=False)\n",
-    "testing.to_csv(\"data/testing.csv\", , index=False)\n",
-    "validation.to_csv(\"data/validation.csv\", , index=False)"
+    "testing.to_csv(\"data/testing.csv\",  index=False)\n",
+    "validation.to_csv(\"data/validation.csv\",  index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
-   "id": "9e323dde",
+   "execution_count": 30,
+   "id": "c8fbabe3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "companies.csv  startup.xlsx  training.csv\r\n",
-      "startup.xls    testing.csv   validation.csv\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!ls data/"
+    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'train/train.csv')).upload_file('data/training.csv')\n",
+    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'test/test.csv')).upload_file('data/testing.csv')\n",
+    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'test/validate.csv')).upload_file('data/validation.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19e1d056",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
