--- a/angel-investor-1-data_cleaning.ipynb
+++ b/angel-investor-1-data_cleaning.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "2164281d",
+   "execution_count": 1,
+   "id": "d0fb0e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "9a64de20",
+   "execution_count": 2,
+   "id": "e777dfdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b0793d6",
+   "id": "0d0b194b",
    "metadata": {},
    "source": [
     "## Downloading Start-Up Data & Importing into Pandas"
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "2b110a36",
+   "execution_count": 3,
+   "id": "89dccec1",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 48.6M  100 48.6M    0     0  20.4M      0  0:00:02  0:00:02 --:--:-- 20.4M\n"
+      "100 48.6M  100 48.6M    0     0  23.7M      0  0:00:02  0:00:02 --:--:-- 23.7M\n"
      ]
     }
    ],
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7559c4b9",
+   "execution_count": 4,
+   "id": "929ad6d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,15 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "cc3bb38d",
+   "execution_count": 5,
+   "id": "69d0d78c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "companies.csv  startup.xls  startup.xlsx\r\n"
+      "companies.csv  startup.xlsx  training.csv\r\n",
+      "startup.xls    testing.csv   validation.csv\r\n"
      ]
     }
    ],
@@ -93,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "6ff8114f",
+   "execution_count": 6,
+   "id": "5b135bff",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc3cb556",
+   "id": "13812225",
    "metadata": {},
    "source": [
     "\n",
@@ -139,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "286cbbb6",
+   "execution_count": 7,
+   "id": "73f9f5ae",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "397945a6",
+   "id": "75bec613",
    "metadata": {},
    "source": [
     "## Keeping Data only for US Companies"
@@ -167,8 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "106dc5bb",
+   "execution_count": 8,
+   "id": "315d8566",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +545,7 @@
        "[28793 rows x 18 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42b0f781",
+   "id": "b29e4fef",
    "metadata": {},
    "source": [
     "### Dropping Rows with Missing Values"
@@ -564,8 +565,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "82c91a6e",
+   "execution_count": 9,
+   "id": "25143985",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0843737",
+   "id": "306fb9fb",
    "metadata": {},
    "source": [
     "### Class to Help Inspect Data for Cleaning Purposes"
@@ -582,8 +583,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "3416e112",
+   "execution_count": 10,
+   "id": "62c56746",
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +789,7 @@
        "16  2011-12-28 00:00:00  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "884c4c19",
+   "id": "a314b09a",
    "metadata": {},
    "source": [
     "### Removing columns that don't have value for analysis"
@@ -878,8 +879,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "97c6167d",
+   "execution_count": 11,
+   "id": "e8d494a9",
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1084,7 @@
        "[20863 rows x 8 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5db1c3d9",
+   "id": "1d978a03",
    "metadata": {},
    "source": [
     "### Cleaning Text Columns"
@@ -1114,8 +1115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "cb952202",
+   "execution_count": 12,
+   "id": "94c5fcdb",
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1320,7 @@
        "[20863 rows x 8 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a1175ef",
+   "id": "c50bc6de",
    "metadata": {},
    "source": [
     "### Exploding Category Column and Converting to Dummy Variables"
@@ -1343,8 +1344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "bcb3a736",
+   "execution_count": 13,
+   "id": "b70b071f",
    "metadata": {},
    "outputs": [
     {
@@ -1371,8 +1372,8 @@
        "|consulting|                    181\n",
        "|hospitality|                   153\n",
        "|web hosting|                   141\n",
-       "|real estate|                   136\n",
        "|social media|                  136\n",
+       "|real estate|                   136\n",
        "|fashion|                       100\n",
        "|medical|                        93\n",
        "|messaging|                      81\n",
@@ -1474,7 +1475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4308b31c",
+   "id": "d6c4d5d3",
    "metadata": {},
    "source": [
     "### One-Hot Encoding Categorical Variables"
@@ -1482,8 +1483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "8e14c1fe",
+   "execution_count": 14,
+   "id": "0f59c53f",
    "metadata": {},
    "outputs": [
     {
@@ -1921,7 +1922,7 @@
        "[20863 rows x 985 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1934,7 +1935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52e529e8",
+   "id": "4571010b",
    "metadata": {},
    "source": [
     "## Splitting into Training, Test, and Validation Datasets"
@@ -1942,8 +1943,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "15e42b92",
+   "execution_count": 15,
+   "id": "e5773cc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1956,8 +1957,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "4b450e6c",
+   "execution_count": 16,
+   "id": "c80d26fe",
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0b5d2d3",
+   "id": "0a2ac3a5",
    "metadata": {},
    "source": [
     "### Saving data to CSV then to S3"
@@ -1986,32 +1987,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "fa714aae",
+   "execution_count": 26,
+   "id": "2e4c0634",
    "metadata": {},
    "outputs": [],
    "source": [
-    "training.to_csv(\"data/training.csv\", index=False)\n",
-    "testing.to_csv(\"data/testing.csv\",  index=False)\n",
-    "validation.to_csv(\"data/validation.csv\",  index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "c8fbabe3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'train/train.csv')).upload_file('data/training.csv')\n",
-    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'test/test.csv')).upload_file('data/testing.csv')\n",
-    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'test/validate.csv')).upload_file('data/validation.csv')"
+    "\n",
+    "#save training data\n",
+    "train_features = training.drop(columns=[\"status_acquired\"])\n",
+    "train_labels = training[\"status_acquired\"]\n",
+    "train_features.to_csv(\"data/train_features.csv\", index=False)\n",
+    "train_labels.to_csv(\"data/train_labels.csv\", index=False)\n",
+    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'train/train_features.csv')).upload_file('data/train_features.csv')\n",
+    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'train/train_labels.csv')).upload_file('data/train_labels.csv')\n",
+    "\n",
+    "#save test data\n",
+    "\n",
+    "test_features = testing.drop(columns=[\"status_acquired\"])\n",
+    "test_labels = testing[\"status_acquired\"]\n",
+    "test_features.to_csv(\"data/test_features.csv\", index=False, header=None)\n",
+    "test_labels.to_csv(\"data/test_labels.csv\", index=False, header=None)\n",
+    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'train/test_features.csv')).upload_file('data/test_features.csv')\n",
+    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'train/test_labels.csv')).upload_file('data/test_labels.csv')\n",
+    "\n",
+    "\n",
+    "#saving validation data\n",
+    "validate_features = validation.drop(columns=[\"status_acquired\"])\n",
+    "validate_labels = validation[\"status_acquired\"]\n",
+    "validate_features.to_csv(\"data/validate_features.csv\", index=False, header=None)\n",
+    "validate_labels.to_csv(\"data/validate_labels.csv\", index=False, header=None)\n",
+    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'train/validate_features.csv')).upload_file('data/validate_features.csv')\n",
+    "boto3.Session().resource('s3').Bucket(bucket).Object(os.path.join(prefix, 'train/validate_labels.csv')).upload_file('data/validate_labels.csv')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19e1d056",
+   "id": "e105f326",
    "metadata": {},
    "outputs": [],
    "source": []
